Add logo edit options for usergroups

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -45,7 +45,7 @@
                       class: input_classes,
                       data: {
                         controller: "flatpickr",
-                        flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%i"),
+                        flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%M"),
                         flatpickr_date_format: "d-m-Y H:i",
                         flatpickr_enable_time: true,
                         flatpickr_time_24hr: true
@@ -62,7 +62,7 @@
                       class: input_classes,
                       data: {
                         controller: "flatpickr",
-                        flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%i"),
+                        flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%M"),
                         flatpickr_date_format: "d-m-Y H:i",
                         flatpickr_enable_time: true,
                         flatpickr_time_24hr: true
@@ -79,7 +79,7 @@
                       class: input_classes,
                       data: {
                         controller: "flatpickr",
-                        flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%i"),
+                        flatpickr_default_date: @event.date&.strftime("%d-%m-%Y %H:%M"),
                         flatpickr_date_format: "d-m-Y H:i",
                         flatpickr_enable_time: true,
                         flatpickr_time_24hr: true
