--- a/app/views/usergroups/_form.html.erb
+++ b/app/views/usergroups/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @usergroup, html: {class: 'space-y-2 space-y'} do |f| %>
   <% if @usergroup.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@usergroup.errors.count, 'error') %> prohibited this beer from being saved:</h2>
+      <h2><%= pluralize(@usergroup.errors.count, 'error') %> prohibited this group from being saved:</h2>
 
       <ul>
         <% @usergroup.errors.full_messages.each do |msg| %>
@@ -13,6 +13,9 @@
 
   <%= f.label :name, class: label_classes %>
   <%= f.text_field :name, class: input_classes %>
+
+  <%= f.label :logo, class: label_classes %>
+  <%= f.file_field :logo %>
 
   <%= f.label :signal_url, class: label_classes %>
   <%= f.text_field :signal_url, class: input_classes %>
