--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -66,7 +66,7 @@
               <%= form_for @event.signups.new(event_id: @event.id, user_id: current_user.id, status: 1), html: { class: "w-full" } do |f| %>
                 <div class="md:flex w-full md:justify-between md:items-center">
                   <div
-                    class="border w-full md:w-1/2 border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-indigo-600 focus-within:border-indigo-600">
+                    class="border w-full md:w-1/2 border-gray-300 rounded-md px-3 py-2 shadow-sm focus-within:ring-1 focus-within:ring-hamers-red-600 focus-within:border-hamers-red-600">
                     <label for="reason" class="block text-xs font-medium text-gray-900">Opmerkingen</label>
                     <%= f.text_field :reason, class: "block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" %>
                   </div>
