--- a/app/views/users/settings/_form_profile.html.erb
+++ b/app/views/users/settings/_form_profile.html.erb
@@ -6,7 +6,7 @@
     <div class="sm:col-span-6">
       <%= f.label field, class: "block text-sm font-medium text-gray-700" %>
       <div class="mt-1">
-        <%= f.text_field field, class: "shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+        <%= f.text_field field, class: input_classes %>
       </div>
     </div>
   <% end %>
@@ -29,5 +29,5 @@
     </div>
   </div>
 
-  <%= f.submit "Opslaan", class: "cursor-pointer inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-hamers-red-600 hover:bg-hamers-red-700 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+  <%= f.submit "Opslaan", class: submit_classes %>
 <% end %>
