--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -48,7 +48,7 @@
         <% if @meeting.secretary %>
           <div class="py-2 sm:py-4 sm:grid sm:grid-cols-3 sm:gap-4">
             <dt class="mx-6 text-sm font-medium text-gray-500">
-              Voorzitter
+              Secretaris
             </dt>
             <dd class="mx-6 mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
               <%= link_to @meeting.secretary.name, @meeting.secretary %>
