--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -115,7 +115,7 @@
   <div class="md:col-span-9 md:pl-6">
     <div class="overflow-hidden border-b sm:rounded-t-md">
       <ul role="list" class="divide-y divide-gray-200">
-        <%= render @user.quotes %>
+        <%= render @quotes %>
       </ul>
     </div>
     <div class="py-6">
