Minor layout fixes (#342)
* Indigo -> hamers-red

* Input classes

* More input classes

* Pagy reordering

* Secretary

* Fix

* 25 items

--- a/app/views/external_signups/_form.html.erb
+++ b/app/views/external_signups/_form.html.erb
@@ -20,7 +20,7 @@
           Voornaam
         </label>
         <div class="mt-1">
-        <%= f.text_field :first_name, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+        <%= f.text_field :first_name, class: input_classes %>
       </div>
 
       <div>
@@ -28,7 +28,7 @@
           Achternaam
         </label>
         <div class="mt-1">
-        <%= f.text_field :last_name, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+        <%= f.text_field :last_name, class: input_classes %>
       </div>
 
       <div>
@@ -36,7 +36,7 @@
           Email adres
         </label>
         <div class="mt-1">
-        <%= f.email_field :email, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+        <%= f.email_field :email, class: input_classes %>
       </div>
 
       <div>
@@ -44,7 +44,7 @@
           Opmerkingen
         </label>
         <div class="mt-1">
-        <%= f.text_area :note, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+        <%= f.text_area :note, class: input_classes %>
       </div>
 
       <div class="pt-4">
