--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -1,4 +1,26 @@
 <div class="bg-white overflow-hidden md:shadow md:rounded-lg hidden md:block md:p-4">
+  <h2 class="text-hamers-red-400 text-xl font-bold mb-4">Citaat van de pagelaad</h2>
+  <div class="flex justify-center h-full">
+    <% if @random_quote %>
+      <div class="flex space-x-3 text-sm">
+        <%= gravatar_for @random_quote.user, class: "h-8 w-8 rounded-full self-center" %>
+        <div class="flex-col flex-1 space-y-1">
+          <div class="flex flex-col sm:flex-row space-y-1 justify-between self-center">
+            <h3 class="flex-grow font-medium"><%= @random_quote.text %></h3>
+          </div>
+          <div class="flex flex-col sm:flex-row text-gray-500">
+            <div class="flex-grow"><%= @random_quote.user.name %></div>
+            <p><%= time_ago_in_words(@random_quote.created_at) %> geleden.</p>
+          </div>
+        </div>
+      </div>
+    <% else %>
+      <div class="w-full">
+        <h3 class="text-sm font-medium text-gray-900">Er zijn nog geen Quotes :(</h3>
+      </div>
+    <% end %>
+  </div>
+
   <h2 class="text-hamers-red-400 text-xl font-bold mb-4">Uitgelicht biertje</h2>
   <div class="flex justify-center h-full">
     <% if @random_beer %>
