Download beer images

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -14,8 +14,8 @@
   <%= f.label :name, class: label_classes %>
   <%= f.text_field :name, class: input_classes %>
 
-  <%= f.label :picture, class: label_classes %>
-  <%= f.text_field :picture, class: input_classes %>
+  <%= f.label :image, class: label_classes %>
+  <%= f.text_field :image, class: input_classes %>
 
   <%= f.label :kind, class: label_classes %>
   <%= f.text_field :kind, class: input_classes %>
