--- a/app/views/usergroups/_form.html.erb
+++ b/app/views/usergroups/_form.html.erb
@@ -14,6 +14,9 @@
   <%= f.label :name, class: label_classes %>
   <%= f.text_field :name, class: input_classes %>
 
+  <% if @usergroup.logo.attached? %>
+    <%= image_tag @usergroup.logo.representation(resize_to_limit: [128, 128]) %>
+  <% end %>
   <%= f.label :logo, class: label_classes %>
   <%= f.file_field :logo %>
 
