--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -34,8 +34,8 @@
 
   <aside class="md:col-span-3 md:pl-6">
     <div class="mt-6">
-      <% if current_user&.active? && @beer.picture? %>
-        <%= image_tag @beer.picture, class: "w-full" %>
+      <% if current_user&.active? && @beer.image.attached? %>
+        <%= image_tag @beer.image, class: "w-full" %>
       <% else %>
         <img src="https://placehold.co/500x500?text=Geen foto" class="w-full">
       <% end %>
