--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -28,8 +28,8 @@
     <div class="flex justify-center h-full">
       <% if @random_beer %>
         <div class="flex-shrink-0">
-          <% if @random_beer.picture.present? %>
-            <%= image_tag @random_beer.picture, class: "h-40 rounded" %>
+          <% if @random_beer.image.attached? %>
+            <%= image_tag @random_beer.image, class: "h-40 rounded" %>
           <% else %>
             <%= image_tag 'beer_splash.jpg', class: "h-40 rounded" %>
           <% end %>
