--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -62,7 +62,7 @@
 
       <% if @user.lid? && !@missed_drinks&.empty? %>
         <div class="p-2 sm:p-4 border-t border-gray-200">
-          <h4>Gemiste Zondagborrels</h4>
+          <h4>Gemiste dispuutsborrels</h4>
           <ul class="list-disc list-inside">
             <% @missed_drinks.each do |md| %>
               <li><%= link_to md.date.strftime("%d-%m-%Y"), md %></li>
