--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -24,7 +24,7 @@
             <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"/>
           </svg>
         </span>
-        <div class="content hidden absolute max-w-xs bg-gray-300 rounded p-2" data-popover-target="content">
+        <div class="content hidden absolute bg-gray-300 rounded p-2" data-popover-target="content">
           <p>iCal links voor je API keys:</p>
           <ul role="list" class="divide-y divide-gray-200">
             <% current_user.api_keys.each do |ak| %>
