--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,6 +8,19 @@
     <%= @event.date.strftime('%d-%m-%Y %H:%M') %>
     <%= "tot #{@event.end_time.strftime('%d-%m-%Y %H:%M')}" if @event.end_time? %>
   </div>
+  <% if @event.location.present? %>
+    <div class="flex items-center text-sm text-gray-400">
+      <%= heroicon('location-marker', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
+      <%= @event.location %>
+    </div>
+  <% end %>
+<% end %>
+
+<% content_for :options do %>
+  <%= link_to "Wijzig", edit_event_path(@event), class: button_classes %>
+  <% if current_user.admin? %>
+    <%= link_to "Verwijder", @event, method: :delete, data: { confirm: 'Weet je het zeker?' }, class: button_classes %>
+  <% end %>
 <% end %>
 
 <div class="flex-1 min-w-0 bg-white md:flex">
@@ -15,15 +28,6 @@
     <div class="relative h-full divide-y divide-gray-200">
       <div class="flex items-center justify-between pb-2">
         <div class="flex items-center justify-between space-x-2">
-          <% if @event.public? %>
-            <%= link_to @event.invitation_link, target: "_blank" do %>
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 hover:stroke-current hover:text-blue-500"
-                   fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-              </svg>
-            <% end %>
-          <% end %>
           <%= link_to edit_event_path(@event) do %>
             <svg xmlns="http://www.w3.org/2000/svg"
                  class="h-5 w-5 hover:stroke-current hover:text-hamers-yellow-500" fill="none" viewBox="0 0 24 24"
@@ -64,8 +68,8 @@
               </div>
               <%= f.hidden_field :event_id, value: @event.id %>
               <div class="flex items-center justify-between mt-2 md:mt-0">
-                <%= f.submit 'Aanwezig', class: 'cursor-pointer mx-2 inline-flex items-center px-3 py-1 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500' %>
-                <%= f.submit 'Afwezig', class: 'cursor-pointer mx-2 inline-flex items-center px-3 py-1 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-hamers-red-600 hover:bg-hamers-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500' %>
+                <%= f.submit 'Aanwezig', class: 'cursor-pointer ml-4 inline-flex items-center px-3 py-1 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500' %>
+                <%= f.submit 'Afwezig', class: 'cursor-pointer ml-4 inline-flex items-center px-3 py-1 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-hamers-red-600 hover:bg-hamers-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500' %>
               </div>
             </div>
           <% end %>
@@ -81,17 +85,7 @@
       </div>
 
       <% if @event.location.present? %>
-        <div class="flex pt-4 font-medium text-gray-900">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 self-center" fill="none" viewBox="0 0 24 24"
-               stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
-          </svg>
-          <%= @event.location %>
-        </div>
-        <div class="embed-responsive embed-responsive-4by3">
+        <div class="pt-4 embed-responsive embed-responsive-4by3">
           <iframe class="embed-responsive-item w-full" height="256" style="border:0"
                   src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCd7hcvDILgo-1XLUCIKwwmy8vVCNLrLK8&q=<%= @event.location %>"
                   allowfullscreen>
@@ -145,11 +139,14 @@
         </ul>
 
         <% if @event.public? %>
-          <p class="flex w-full justify-between">
+          <div class="flex w-full justify-between">
             <span class="font-semibold pb-1">Plebs</span>
             <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-green-100 text-green-800">
               <%= @event.external_signups.count %>
             </span>
+          </div>
+          <p class="text-sm text-gray-500">
+            Deze activiteit is publiek. Externen kunnen zich inschrijven via <%= link_to "deze link", @event.invitation_link, target: "_blank" %>.
           </p>
           <ul role="list" class="mb-2 space-y-2">
             <% @event.external_signups.each do |s| %>
