--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,49 +17,20 @@
 <% end %>
 
 <% content_for :options do %>
+  <%= link_to "Schop mensen", reminder_path(@event), data: { confirm: "Je gaat alle mensen op onbekend een mail sturen, weet je het zeker?" }, class: button_classes if @event.open? %>
   <%= link_to "Wijzig", edit_event_path(@event), class: button_classes %>
-  <% if current_user.admin? %>
-    <%= link_to "Verwijder", @event, method: :delete, data: { confirm: 'Weet je het zeker?' }, class: button_classes %>
-  <% end %>
+  <%= link_to "Verwijder", @event, method: :delete, data: { confirm: 'Weet je het zeker?' }, class: button_classes if current_user.admin? %>
 <% end %>
 
 <div class="flex-1 min-w-0 bg-white md:flex">
   <div class="border-b border-gray-200 md:border-b-0 bg-white lg:min-w-0 lg:flex-1 pr-4 font-medium text-gray-900">
     <div class="relative h-full divide-y divide-gray-200">
-      <div class="flex items-center justify-between pb-2">
-        <div class="flex items-center justify-between space-x-2">
-          <%= link_to edit_event_path(@event) do %>
-            <svg xmlns="http://www.w3.org/2000/svg"
-                 class="h-5 w-5 hover:stroke-current hover:text-hamers-yellow-500" fill="none" viewBox="0 0 24 24"
-                 stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"/>
-            </svg>
-          <% end %>
-          <% if @event.open? %>
-            <%= link_to reminder_path(@event), data: { confirm: "Je gaat alle mensen op onbekend een mail sturen, weet je het zeker?" } do %>
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 hover:stroke-current hover:text-hamers-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
-              </svg>
-            <% end %>
-          <% end %>
-          <% if current_user.admin? %>
-            <%= link_to @event, method: :delete, data: { confirm: 'Weet je het zeker?' } do %>
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 hover:stroke-current hover:text-hamers-red-500"
-                   fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"/>
-              </svg>
-            <% end %>
-          <% end %>
-        </div>
-      </div>
 
-      <div class="py-4">
+      <div class="py-4 border-t border-gray-200">
         <%= @event.description %>
       </div>
-      <div class="flex flex-col w-full border-t border-b border-gray-200 pt-4">
+
+      <div class="flex flex-col w-full border-b border-gray-200 pt-4">
         <% if @event.open? %>
           <%= form_for @event.signups.new(event_id: @event.id, user_id: current_user.id, status: 1), html: { class: "w-full" } do |f| %>
             <div class="flex w-full md:justify-between md:items-center">
@@ -68,8 +39,8 @@
               </div>
               <%= f.hidden_field :event_id, value: @event.id %>
               <div class="flex items-center justify-between mt-2 md:mt-0">
-                <%= f.submit 'Aanwezig', class: 'cursor-pointer ml-4 inline-flex items-center px-3 py-1 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500' %>
-                <%= f.submit 'Afwezig', class: 'cursor-pointer ml-4 inline-flex items-center px-3 py-1 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-hamers-red-600 hover:bg-hamers-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500' %>
+                <%= f.submit 'Aanwezig', class: 'cursor-pointer ml-4 inline-flex items-center px-3 py-1 border border-transparent text-base font-bold rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500' %>
+                <%= f.submit 'Afwezig', class: 'cursor-pointer ml-4 inline-flex items-center px-3 py-1 border border-transparent text-base font-bold rounded-md shadow-sm text-white bg-hamers-red-600 hover:bg-hamers-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-hamers-red-500' %>
               </div>
             </div>
           <% end %>
