--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -16,7 +16,7 @@
           <%= f.select :user_id, options_for_select(users_array), {}, class: select_classes %>
         </div>
         <div class="text-right mt-4 sm:w-full">
-          <%= f.submit 'Citeer', class: 'text-center py-2 px-4 border border-transparent shadow-sm text-sm font-bold rounded-md text-white bg-hamers-red-500 hover:bg-hamers-red-600 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' %>
+          <%= f.submit 'Citeer', class: submit_classes %>
         </div>
       <% end %>
     </div>
