No outermost padding on mobile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       </div>
 
       <main class="-mt-32">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
           <div class="bg-white rounded-lg overflow-hidden shadow p-6">
             <%= yield %>
           </div>
