Also fix mobile

--- a/app/views/meetings/_list.html.erb
+++ b/app/views/meetings/_list.html.erb
@@ -2,7 +2,7 @@
   <% meetings.each do |meeting| %>
     <li>
       <%= link_to meeting, class: "block hover:bg-gray-50" do %>
-        <div class="p-4 grid grid-cols-3 gap-4 items-center">
+        <div class="p-4 grid grid-cols-2 sm:grid-cols-3 gap-4 items-center">
           <div>
             <div class="text-sm min-w-0 flex-1 sm:flex sm:items-center">
               <div class="flex">
